Fixed sub-property bug.